--- a/ServerManager/MainWindow.xaml
+++ b/ServerManager/MainWindow.xaml
@@ -7,18 +7,85 @@
         mc:Ignorable="d"
         Title="Server Monitor" Height="680" Width="480" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         >
+    <Window.Resources>
+        <Style x:Key="RoundCorner" TargetType="{x:Type Button}">
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid x:Name="grid">
+                            <Border x:Name="border" CornerRadius="4" BorderBrush="#777" BorderThickness="1">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center">
+                                </ContentPresenter>
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="#f4f4f4"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="#ccc"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" TargetName="grid" Value="0.25"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="GreenRoundCorner" TargetType="{x:Type Button}">
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid x:Name="grid">
+                            <Border x:Name="border" CornerRadius="4" BorderBrush="#777" BorderThickness="0">
+                                <Border.Background>
+                                    <SolidColorBrush Color="#FF3DC26F" />
+                                </Border.Background>
+                                <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center">
+                                </ContentPresenter>
+                            </Border>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="#FF38A862"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" TargetName="border" Value="#FF1E8D47"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" TargetName="grid" Value="0.25"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid TextBlock.FontFamily="{StaticResource Montserrat}">
-        <Border Margin="10" Padding="10 0" CornerRadius="10">
+        <Border Margin="10" Padding="10 0" CornerRadius="10" BorderBrush="#ccc" BorderThickness="1">
             <Grid Margin="30 0 30 30">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="180" />
+                    <RowDefinition Height="220" />
                     <RowDefinition Height="80" />
                     <RowDefinition Height="80" />
                     <RowDefinition Height="1*" />
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Margin="0 10 0 30">
+                <Grid Grid.Row="0">
                     <!-- logo image -->
-                    <Image Source="images/black_wolf.png" />
+                    <Image Source="images/black_wolf.png" Height="160" Width="160">
+                        <Image.Clip>
+                            <EllipseGeometry Center="80, 80" RadiusX="80" RadiusY="80" />
+                        </Image.Clip>
+                    </Image>
                 </Grid>
                 <Grid Grid.Row="1" Margin="0 0 10 0">
                     <Grid.RowDefinitions>
@@ -44,14 +111,15 @@
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <!-- update button -->
-                    <Button Name="updateButton" Grid.Column="0" FontSize="24" Content="Update" Margin="10 0" Background="#FF3DC26F" BorderBrush="{x:Null}" Foreground="White"
-                            Click="UpdateButton_Click"
+                    <Button Name="updateButton" Grid.Column="0" FontSize="24" Content="Update" Margin="10 0" BorderBrush="{x:Null}" Click="UpdateButton_Click"
                             Height="40"
+                            Style="{DynamicResource GreenRoundCorner}"
                             />
                     <!-- repair button -->
                     <Button Name="repairButton" Grid.Column="1" FontSize="24" Content="Repair" Margin="10 0" Background="{x:Null}" BorderBrush="#333" Foreground="#000"
                             Click="RepairButton_Click"
                             Height="40"
+                            Style="{DynamicResource RoundCorner}"
                             />
                 </Grid>
                 <!-- log text -->
